fixed api security issue

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/kuoihsuan2002/Library/Android/sdk
+GEMINI_API_KEY=AIzaSyBkTysGhs1wLE3WQJfBwLkeKgaoo5ZaDQ8
